# Arklowdun

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  LICENSE.txt  NOTICE.md  README.md  drift-report.json  index.html  package-lock.json  package.json  playwright.config.ts  roundtrip-diff.schema.json  schema.sql  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
artifacts/: .gitignore
docs/: ADR-0001-db-path-and-file.md  ADR-0002-sqlite-phase-1.md  README.md  a11y-checklist.md  backfill-performance.md  backfill_performance.md  baseline-schema.md  ci-guardrails.md  context-notes-backend.md  db-write-inventory.md  diagnostics.md  domain-models.md  drop-legacy.md  errors.md  exdate-normalisation.md  exdate-tests.md  fixtures-large.md  integrity-rules.md  licensing.md  master-plan.md  migration-guidelines.md  migrations-spec.md  pets-pr3-scope.md  pets-pr6-scope.md  prA_phase0_report.md  prA_phase1_guard_consolidation.md  prA_phase2_vault_instance_unification.md  prA_phase3_split_plan.md  prA_phase3_stage0_inventory.md  prA_phase3_stage1_vault_routing.md  prA_phase3_stage2_ipc_reads.md  prA_phase3_stage3_ipc_mutations.md  prA_phase3_stage4_background_jobs.md  prA_phase3_stage5_final_audit.md  prA_phase4_ipc_entrypoints.md  prA_phase5_logging_alignment.md  prA_phase6_integration_validation.md  prA_phase7_acceptance.md  prA_workplan.md  query-perf-guard.md  (+21 more)
migrations/: 0001_baseline.sql  0002_notes_category_cursor.sql  0003_domain_tables.up.sql  0003_note_links.down.sql  0003_note_links.up.sql  0004_add_deleted_at.down.sql  0004_add_deleted_at.up.sql  0004_households_invariants.sql  0005_add_positions.up.sql  0006_add_file_paths.down.sql  0006_add_file_paths.up.sql  0008_explicit_fk_actions.up.sql  0009_soft_delete_notes_shopping.down.sql  0009_soft_delete_notes_shopping.up.sql  0010_notes_z_index.up.sql  0011_events_start_idx.down.sql  0011_events_start_idx.up.sql  0012_household_add_tz.down.sql  0013_events_add_tz_and_utc.down.sql  0013_events_add_tz_and_utc.up.sql  0014_events_start_at_utc_index.down.sql  0014_events_start_at_utc_index.up.sql  0015_vehicles_rework.down.sql  0015_vehicles_rework.up.sql  0016_idx_bills_household_due.down.sql  0017_events_add_rrule_exdates.down.sql  0018_search_indexes.down.sql  0018_search_indexes.up.sql  0019_files_index.down.sql  0019_files_index.up.sql  0020_files_index_fks.down.sql  0020_files_index_fks.up.sql  0021_events_end_at_utc_index.down.sql  0021_events_end_at_utc_index.up.sql  0021_household_color.down.sql  0021_household_color.up.sql  0022_events_backfill_checkpoint.down.sql  0022_events_backfill_checkpoint.up.sql  0022_shadow_read_audit.down.sql  0022_shadow_read_audit.up.sql  (+56 more)
patches/: manage-grid.patch
public/: README.txt
schema/: licensing-inventory.schema.json
scripts/: capture-logs-view.mjs  check-household-scope.sh  check-migrations.sh  check_migrations.sh  check_pending_migrations.sh  check_strings.sh  collect-diagnostics.ps1  collect-diagnostics.sh  cov-rs.mjs  event-roundtrip.js  event-roundtrip.ts  make-sample-bundle.sh  migrate-checksum.ts  migrate.sh  new_migration.sh  renumber_migrations.sh  roundtrip-verify.mjs  roundtrip-verify.ts  roundtrip.sh  security-smoke.ps1  security-smoke.sh  test-loader.mjs  test-preload.mjs  test_idempotency.sh  verify_schema.sh
src/: debug.ts  (+29 more)
src-tauri/: Cargo.toml  build.rs  schema.sql  tauri.conf.json  tauri.conf.json5  tauri.dev.conf.json
src-tauri/bindings/: DbHealthOffender.ts
src-tauri/capabilities/: clipboard.json  default.json  opener-doc.json  sql.json  window-management.json
src-tauri/examples/: roundtrip.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0004_note_links_normalize_instance_ids.sql
src-tauri/resources/licenses/: CREDITS.txt  NOTICE.txt
src-tauri/schemas/: report-v1.schema.json
src-tauri/scripts/: crash_probe.rs  migrate.rs  sec_smoke.rs  time_backfill.rs  verify_schema.rs
src-tauri/src/: attachment_category.rs  attachments.rs  categories.rs  commands.rs  commands_family.rs  db.rs  diagnostics.rs  events_tz_backfill.rs  exdate.rs  family_logging.rs  file_ops.rs  files_indexer.rs  files_validation.rs  household.rs  household_active.rs  id.rs  importer.rs  lib.rs  logging.rs  main.rs  migrate.rs  migration_guard.rs  model_family.rs  note_links.rs  notes.rs  repo.rs  repo_family.rs  state.rs  time.rs  time_errors.rs  time_invariants.rs  time_shadow.rs  util.rs  vault.rs  vault_migration.rs
src-tauri/src/db/: backup.rs  hard_repair.rs  health.rs  manifest.rs  repair.rs  schema_rebuild.rs  swap.rs
src-tauri/src/error/: crash_id.rs  mod.rs
src-tauri/src/export/: family.rs  manifest.rs  mod.rs
src-tauri/src/file_ops/: tests.rs  tests_unit.rs
src-tauri/src/files/: path.rs
src-tauri/src/import/: bundle.rs  execute.rs  metadata.rs  mod.rs  plan.rs  report.rs  rows.rs  table_order.rs  validator.rs
src-tauri/src/ipc/: guard.rs
src-tauri/src/ops/: reporting.rs
src-tauri/src/pets/: metrics.rs
src-tauri/src/security/: error_map.rs  fs_policy.rs  fs_policy_tests.rs  mod.rs
src-tauri/src/vault/: guard.rs  logging.rs  mod.rs  paths.rs
src-tauri/tests/: baseline.rs  categories.rs  crash_mid_migration.rs  critical_error.rs  db_backup.rs  db_health.rs  db_repair.rs  db_status_cli.rs  db_write_tx.rs  diagnostics_cli.rs  diagnostics_household_stats.rs  events_backfill.rs  events_list_range.rs  exdate_application.rs  exdate_normalisation.rs  family_export.rs  family_ipc.rs  family_logging.rs  family_repo.rs  file_ops.rs  household_active.rs  household_cascade.rs  household_color.rs  household_crud.rs  household_delete.rs  household_files_cleanup.rs  households_invariants.rs  ipc_household_scope.rs  items_tx.rs  log_file_smoke.rs  log_redaction.rs  log_rotation.rs  migrate_cli.rs  migrate_from_zero.rs  migrate_sample.rs  migration_drop_legacy_time.rs  migration_guard.rs  migrations_recovery.rs  note_links_integration.rs  notes_with_categories.rs  (+15 more)
src-tauri/tests/fixtures/: filename-validation.json  sample.sql
(+637 files in other folders)
