[package]
name = "arklowdun"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "arklowdun"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "arklowdun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["legacy_deleted_at"]
legacy_deleted_at = []

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-clipboard-manager = "2"
uuid = { version = "1", features = ["serde", "v7"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
anyhow = "1"
ts-rs = { version = "10", features = ["no-serde-warnings"] }
paste = "1.0"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tracing-appender = "0.2"
log = "0.4"
tracing-log = "0.2"
time = "0.3"
rrule = { version = "0.14", features = ["serde"] }
include_dir = "0.7"
futures = "0.3"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
similar = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }
dirs = "5"
sha2 = "0.10"
thiserror = "1"
file-rotate = "0.7"

[dev-dependencies]
libc = "0.2"
assert_cmd = "2"
tempfile = "3"


[[bin]]
name = "verify_schema"
path = "scripts/verify_schema.rs"

[[bin]]
name = "migrate"
path = "scripts/migrate.rs"

[[bin]]
name = "sec_smoke"
path = "scripts/sec_smoke.rs"

[[bin]]
name = "log_stress"
path = "tests/bin/log_stress.rs"

[[bin]]
name = "crash_probe"
path = "scripts/crash_probe.rs"
