[package]
name = "arklowdun"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "arklowdun"

[lib]
name = "arklowdun_lib"
path = "src/lib.rs"
doctest = false
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["legacy_deleted_at"]
legacy_deleted_at = []

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "=0.10.4"
iana-time-zone = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
anyhow = "1"
ts-rs = { version = "10", features = ["no-serde-warnings"] }
paste = "1.0"
regex = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tracing-appender = "0.2"
log = "0.4"
tracing-log = "0.2"
time = "0.3"
rrule = { version = "0.14", features = ["serde"] }
include_dir = "0.7"
futures = "0.3"
once_cell = "1"
jsonschema = "0.17"
semver = "1"
clap = { version = "4", features = ["derive"] }
similar = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tempfile = "3"
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }
dirs = "5"
sha2 = "0.10"
thiserror = "1"
file-rotate = "0.7"
rusqlite = { version = "0.32", features = ["backup"] }
fs2 = "0.4"

# Tauri & plugins
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"

[dev-dependencies]
libc = "0.2"
assert_cmd = "2"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
# On macOS, also enable the private API feature to match tauri.conf.json5
tauri = { version = "2", features = ["test", "macos-private-api"] }

[[bin]]
name = "verify_schema"
path = "scripts/verify_schema.rs"

[[bin]]
name = "migrate"
path = "scripts/migrate.rs"

[[bin]]
name = "sec_smoke"
path = "scripts/sec_smoke.rs"

[[bin]]
name = "log_stress"
path = "tests/bin/log_stress.rs"

[[bin]]
name = "recurrence_bench"
path = "tests/bin/recurrence_bench.rs"

[[bin]]
name = "crash_probe"
path = "scripts/crash_probe.rs"

[[bin]]
name = "time"
path = "scripts/time_backfill.rs"
